# django-eztaskmanager

./: .bumpversion.cfg  .gitignore  .readthedocs.yml  AUTHORS.md  CHANGELOG.md  CLAUDE.md  LICENSE.md  README.md  pyproject.toml  requirements_docs.txt
.github/workflows/: django.yml  push.yml  pushed.yml  released.yml
demoproject/: .coverage  .coveragerc  docker-compose-local.yml
demoproject/demoproject/: settings.py  test_settings.py  urls.py
docs/: conf.py  discussions.rst  getstarted.rst  index.rst
docs/howtos/: dev_add_to_dockerized.rst  dev_add_to_existing.rst  dev_contribute.rst  dev_debug.rst  dev_notifications.rst  dev_publish_changes.rst  users_admin_gui.rst
docs/reference/: django.rst  index.rst  models.rst  services.init.rst  services.logger.rst  services.notifications.rst  services.queues.rst  services.rst  views.rst
eztaskmanager/: __init__.py  admin.py  apps.py  models.py  settings.py  urls.py  views.py
eztaskmanager/locale/it/LC_MESSAGES/: django.po
eztaskmanager/management/commands/: collectcommands.py  test_command.py  test_livelogging_command.py  test_logging_command.py
eztaskmanager/migrations/: 0001_initial.py  0002_task_scheduled_job_id.py  0003_alter_task_cached_next_ride_alter_task_scheduling.py
eztaskmanager/services/: __init__.py  logger.py  notifications.py  queues.py  tasks.py
eztaskmanager/static/js/: axios.js
eztaskmanager/templates/: live_log_viewer.html
eztaskmanager/tests/: test_admin.py  test_logger.py  test_models.py  test_services.py  test_views.py
tests/: __init__.py
