[tool.poetry]
name = "eztaskmanager"
version = "0.1.0"
description = "Django application that allows the management of scheduled, long, asynchronous tasks."
authors = ["Guglielmo Celata <guglielmo@openpolis.it>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"
django = ">=3.2"
pytz = "^2024.1"
django-rq = "^2.10.2"
rq-scheduler = "^0.13.1"
django-extensions = "^3.2.3"
gnureadline = "^8.1.2"
whitenoise = "^6.6.0"
celery = {extras = ["redis"], version = "^5.3.6"}
beautifulsoup4 = "^4.12.3"
slack-sdk = "^3.27.1"
sphinx-rtd-theme = "^2.0.0"


[tool.poetry.group.dev.dependencies]
ipython = "^8.22.2"
uvicorn = "^0.29.0"
coverage = "^7.4.4"
black = "^24.3.0"
bump2version = "^1.0.1"
flake8 = "^7.0.0"
flake8-isort = "^6.1.1"
flake8-docstrings = "^1.7.0"
flake8-bugbear = "^24.2.6"
mypy = "^1.9.0"
pytz = "^2024.1"
pre-commit = "^3.7.0"


[tool.poetry.group.docs.dependencies]
sphinx = "^7.2.6"
sphinx-django-command = "^0.1.3"
sphinx-autobuild = "^2024.2.4"
pyembed-rst = "^1.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

