[tool.poetry]
name = "django-eztaskmanager"
version = "0.5.0"
packages = [{include = "eztaskmanager"}]
description = "Django application that allows the management of scheduled, long, asynchronous tasks."
license = "MIT License"
authors = ["Guglielmo Celata <guglielmo@openpolis.it>"]
readme = "README.md"
homepage = "https://github.com/openpolis/django-eztaskmanager.git"
repository = "https://github.com/openpolis/django-eztaskmanager.git"
documentation = "https://django-eztaskmanager.readthedocs.io"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.0",
    "Framework :: Django :: 4.1",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Django",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Internet :: WWW/HTTP",
]
keywords = ["async", "cron", "django", "commands", "manager", "queues", "task", "timer", "scheduling", "rq", "celery"]


[tool.poetry.dependencies]
python = ">=3.10"
django = {version = "^5.1.4", optional = true}
pytz = "^2024.2"
django-rq = "^3.0.0"
rq-scheduler = "^0.14.0"
django-extensions = "^3.2.3"
gnureadline = "^8.2.13"
celery = {extras = ["redis"], version = "^5.4.0", optional = true}
slack-sdk = "^3.27.1"
whitenoise = "^6.8.1"


[tool.poetry.group.dev.dependencies]
ipython = "^8.31.0"
uvicorn = "^0.34.0"
coverage = "^7.6.10"
beautifulsoup4 = "^4.13.0b2"
black = "^24.10.0"
bump2version = "^1.0.1"
flake8 = "^7.1.1"
flake8-isort = "^6.1.1"
flake8-docstrings = "^1.7.0"
flake8-bugbear = "^24.12.12"
mypy = "^1.12.1"
pytz = "^2024.2"
pre-commit = "^4.0.1"


[tool.poetry.group.docs.dependencies]
sphinx = "^8.1.3"
sphinx-django-command = "^0.1.3"
sphinx-autobuild = "^2024.10.3"
pyembed-rst = "^1.1.0"

[tool.poetry.extras]
slack = ["slack_sdk"]
celery = ["celery"]
django = ["django"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

